--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ The morning session will be hosted at the Montreal Neurological Institute (MNI),
 		</tr>
  </table>		
  
- <h1 id="registration"> REGISTATION</h1>
+ <h1 id="registration"> REGISTRATION</h1>
   <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
