--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 <section class="some-related-articles">
   <center>
   <h1 id="about">ABOUT</h1>
-   <p>Rapid advances in structural and functional neuroimaging, together with the rise of network analytical tools, have produced unprecedented possibilities to characterize the brain in autism. In this workshop held on April 30 2019 in Montreal, we will bring together emerging and established scientists to discuss cutting-edge neuroimaging applications in the study of autism, and to also provide hand-on guidance for their implementation.</br>
+   <p>Rapid advances in structural and functional neuroimaging, together with the rise of network analytical tools, have produced unprecedented possibilities to characterize the brain in autism. In this workshop, held on April 30 2019 in Montreal, we will bring together emerging and established scientists to discuss cutting-edge neuroimaging applications in the study of autism. We will also provide hand-on guidance for their implementation.</br>
 </br>
-The first part of the workshop consists of lectures and keynotes from outstanding junior and senior researchers and a poster session that gives ample opportunities to present new work and to interact.  In the afternoon, experts are leading practical hands-on sessions aiming at teaching on how to optimally implement some of the advanced analyses being presented at the workshop day.</br>
+The first part of the workshop consists of lectures and keynotes from outstanding junior and senior researchers and a poster session that gives ample opportunities to present new work and to interact.  In the afternoon, experts are leading practical hands-on sessions on how to optimally implement some of the advanced analyses being presented at the workshop.</br>
 </br>
 The morning session will be hosted at the Montreal Neurological Institute (MNI), a site with a rich history of neuroscience research and neuroimaging excellence. In the afternoon, participants can join the hands-on educational sessions at the Notman House, a technology hub in direct walking distance from the MNI that provides an ideal space for easy and plentiful interactions.
 </p>
@@ -63,14 +63,14 @@ The morning session will be hosted at the Montreal Neurological Institute (MNI),
 			Richard Bethlehem PhD (University Of Cambridge, Uk)</Br>
 			Casey Paquola PhD (Montreal Neurological Intitute, Quebec, Canada)</Br>
 			Seok-Jun Hong PhD (Child Mind Institute)</Br>
-			Isabelle Soulieres PhD (UQAM, Canada) </Br> 			
+			Isabelle Soulières PhD (UQAM, Canada) </Br> 			
 			John Lewis PhD (Montreal Neurological Institute, Quebec, Canada)</Br>
-			Megha Sharda PhD (Universite De Montreal, Quebec, Canada)</Br>
+			Megha Sharda PhD (Université De Montreal, Quebec, Canada)</Br>
 			Sofie Valk PhD (Foschungszentrum Julich, Germany)</Br>
 			Boris Bernhardt PhD (Montreal Neurological Institute, Quebec, Canada)</Br>
 			Erin Dickie PhD (CAMH, Toronto)</Br>
-			Sebastien Jaquemont MD (Chu St Justine, Montreal) </Br>
-			Laurent Mottron MD (Universite De Montreal, Quebec, Canada)</Br>
+			Sébastien Jaquemont MD (CHU St Justine, Montreal) </Br>
+			Laurent Mottron MD (Université De Montreal, Quebec, Canada)</Br>
 			</p>
 			</td>	
 		</tr>
