--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ The morning session will be hosted at the Montreal Neurological Institute (MNI),
   <p>
   <center>
   Follow us on twitter</br>
-  <a href="https://twitter.com/bic_mni/" target="_blank">
+  <a href="https://twitter.com/MontrealAutism/" target="_blank">
   <img src="assets/twitter_logo_grey.jpg" width="60px" /></a>
   </center>
   </br>
