--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@ The morning session will be hosted at the Montreal Neurological Institute (MNI),
 			</center>
 		</td>
 		</tr>
+		<tr>
+		<td style="width:100px" text-align:center">	
+			<center>
+			<img src="assets/McGill_logo.jpg" width="80px"/>
+			</center>
+		</td>
+		</tr>
 		
 	
  </table>	
