--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ The morning session will be hosted at the Montreal Neurological Institute (MNI),
 		<tr>
 		<td style="width:100px" text-align:center">	
 			<center>
-			<img src="assets/McGill_logo.jpg" width="80px"/>
+			<img src="assets/McGill_logo.png" width="80px"/>
 			</center>
 		</td>
 		</tr>
