--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@ The morning session will be hosted at the Montreal Neurological Institute (MNI),
   <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
-			<p>Early bird registration fees are $50 for the workshop and $50 for the hands on sessions (limited to 70 participants). </br>
-			Registration site opens in January 2019!</h2> </p>
+			<p>Early bird registration fees are $60 for the workshop and $60 for the hands on sessions, taxes included (limited to 70 participants). </br>
+			Registration is now open, please  
+	  		<a href="http://neuroevents.mcgill.ca/forms/autism-neuroimaging-2019.php" target="_blank">Register here</a></h2> </p>
 			</td>	
 		</tr>
 	
