--- a/index.html
+++ b/index.html
@@ -147,6 +147,13 @@ The morning session will be hosted at the Montreal Neurological Institute (MNI),
 		<tr>
 		<td style="width:100px" text-align:center">	
 			<center>
+			<img src="assets/qbin.jpg" width="80px"/>
+			</center>
+		</td>
+		</tr>
+		<tr>
+		<td style="width:100px" text-align:center">	
+			<center>
 			<img src="assets/neuro_final_400.jpg" width="80px"/>
 			</center>
 		</td>
