--- a/index.html
+++ b/index.html
@@ -51,8 +51,19 @@ The first part of the workshop consists of lectures and keynotes from outstandin
 The morning session will be hosted at the Montreal Neurological Institute (MNI), a site with a rich history of neuroscience research and neuroimaging excellence. In the afternoon, participants can join the hands-on educational sessions at the Notman House, a technology hub in direct walking distance from the MNI that provides an ideal space for easy and plentiful interactions.
 </p>
 
-<h1 id="program"> WORKSHOP PROGRAM AND CONFIRMED SPEAKERS</h1>
+<h1 id="program"> PRELIMAINRY WORKSHOP PROGRAM AND CONFIRMED SPEAKERS</h1>
   <table style="width:100%">
+		<tr>
+			<td style="width:350px; text-align:center">
+			<h2>TOPICS</h2> 
+			<p>
+			Big data - Multimodal imaging - Connectomics </br> 
+			Imaging genetics - Human/Animal translation  </br> 
+			Open Science - Neuroinformatics - Imaging predictors </br> 
+			</br> 
+			</p>
+			</td>
+		</tr>
 		<tr>
 			<td style="width:350px; text-align:center">
 			<h2>EDUCATIONAL WORKSHOP AT THE MONTREAL NEUROLOGICAL INSTITUTE, 8.30AM-3.30PM</h2> 
@@ -73,6 +84,8 @@ The morning session will be hosted at the Montreal Neurological Institute (MNI),
 			Erin Dickie PhD (CAMH, Toronto)</Br>
 			Sébastien Jaquemont MD (CHU St Justine, Montreal) </Br>
 			Laurent Mottron MD (Université De Montreal, Quebec, Canada)</Br>
+			</br>
+			</br>
 			</p>
 			</td>	
 		</tr>
