--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ The first part of the workshop consists of lectures and keynotes from outstandin
 The morning session will be hosted at the Montreal Neurological Institute (MNI), a site with a rich history of neuroscience research and neuroimaging excellence. In the afternoon, participants can join the hands-on educational sessions at the Notman House, a technology hub in direct walking distance from the MNI that provides an ideal space for easy and plentiful interactions.
 </p>
 
-<h1 id="program"> PRELIMAINRY WORKSHOP PROGRAM AND CONFIRMED SPEAKERS</h1>
+<h1 id="program"> PRELIMINARY WORKSHOP PROGRAM AND CONFIRMED SPEAKERS</h1>
   <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
