--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Autism neuroimaging workshop: advanced topics and nitty-gritties, MONTREAL 2019</title>
+<title>Gradients of Brain Organisation, MONTREAL 2020</title>
 <meta name="description" content="AUTISM NEUROIMAGING AND CONNECTOMICS WORKSHOP 2019">
 <meta name="author" content="boris@bic.mni.mcgill.ca">
 <meta name="viewport" content="width=device-width, initial-scale=1">
