--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Gradients of Brain Organisation, MONTREAL 2020</title>
-<meta name="description" content="AUTISM NEUROIMAGING AND CONNECTOMICS WORKSHOP 2019">
+<title>Gradients of Brain OrganiZation, MONTREAL 2020</title>
+<meta name="description" content="GRADIENTS OF BRAIN ORGANIZATION">
 <meta name="author" content="boris@bic.mni.mcgill.ca">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--[if lt IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script><script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->  
