--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <center>
   <h1 id="about">ABOUT</h1>
    <p>Recent years have seen a rise of new methods and applications to study smooth spatial transitions — or gradients —of brain organization. Identification and analysis of cortical gradients provides a framework to study brain organization across species, to examine changes in brain development and aging, and to more generally study the interrelation between brain structure, function and cognition. In this pre-OHBM workshop, held on the 23rd of June 2020 in Montreal, we will bring together outstanding junior and senior scientists to discuss the challenges and opportunities afforded by this emerging perspective.  
-	</br>
+	<tr>
 	This one-day workshop will be hosted at the Montreal Neurological Institute, a site with a rich history of neuroscience research and neuroimaging excellence. Early career researchers will take centre stage for a series of talks on state-of-the-art development and application of gradient approaches, while a diverse range of established scientists from across the globe will chair the proceedings. In this manner, we hope to stimulate discussions on how gradients are changing our understanding brain organisation and to initiate fellow researchers to this burgeoning field. 
 	</br>
 </p>
@@ -65,7 +65,7 @@
 		</tr>
 		<tr>
 			<td style="width:350px; text-align:center">
-			<h2>ORGANISING COMMITTEE, 8.30AM-3.30PM</h2> 
+			<h2>ORGANISING COMMITTEE</h2> 
 			<p>
 			Daniel Margulies PhD (Institut Pasteur, France) </br>
 			Boris Bernhardt PhD (Montreal Neurological Institute, Canada) </br>
@@ -82,19 +82,10 @@
 			</p>
 			</td>	
 		</tr>
-		<tr>
-			<td style="width:350px; text-align:center">
-			<h2>HANDS ON SESSIONS AND BRAINHACK AT THE NOTMAN HOUSE</h2> 
-			<p>
-			Morphometric and MRI covariance analysis</Br>
-			Resting-state functional processing and QC</Br>
-			Large-Scale network modeling </Br>
-			</p>
-			</td>	
 		</tr>
  </table>
  
- <h1 id="venue"> VENUES</h1>
+ <h1 id="venue"> VENUE</h1>
   <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
@@ -107,15 +98,6 @@
 			  </br>
 			</td>	
 		</tr>
-		<tr>
-			<td style="width:350px; text-align:center">
-			<h2>3.30-9.00PM: NOTMAN HOUSE</h2> 
-			<p>51 Sherbrooke West Montreal, QC, H2X 1X2</p></br>
-			</br>
-			<img src="assets/notman.png" width="400px" /></br>
-			<a href="https://www.notman.org" target="_blank">https://www.notman.org</a></br>
-			</td>	
-		</tr>
  </table>		
  
  <h1 id="register"> REGISTRATION</h1>
@@ -123,8 +105,8 @@
 		<tr>
 			<td style="width:350px; text-align:center">
 				<p>
-				Early bird registration fees are $60 for the workshop and $60 for the hands on sessions, 
-				taxes included (limited to 70 participants). </br>
+				Early bird registration fees are $50 for faculty and $25 for trainees, 
+				taxes included. </br>
 				Registration is now open - please  
 	  			<a href="http://neuroevents.mcgill.ca/forms/autism-neuroimaging-2019.php" target="_blank">
 				Register here</a>
