--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -44,13 +44,13 @@
 <section class="some-related-articles">
   <center>
   <h1 id="about">ABOUT</h1>
-   <p>Recent years have seen a rise of new methods and applications to study smooth spatial transitions — or gradients —of brain organization. Identification and analysis of cortical gradients provides a framework to study brain organization across species, to examine changes in brain development and aging, and to more generally study the interrelation between brain structure, function and cognition. In this pre-OHBM workshop, held on the 23rd of June 2020 in Montreal, we will bring together outstanding junior and senior scientists to discuss the challenges and opportunities afforded by this emerging perspective.  
+   <p>Recent years have seen a rise of new methods and applications to study smooth spatial transitions — or gradients —of brain organization. Identification and analysis of cortical gradients provides a framework to study brain organization across species, to examine changes in brain development and aging, and to more generally study the interrelation between brain structure, function and cognition. In this pre-OHBM workshop, held on the 23rd of June 2020 in Montreal, we will bring together outstanding junior and senior scientists to discuss the challenges and opportunities afforded by this emerging perspective.  	</br>
 	<tr>
-	This one-day workshop will be hosted at the Montreal Neurological Institute, a site with a rich history of neuroscience research and neuroimaging excellence. Early career researchers will take centre stage for a series of talks on state-of-the-art development and application of gradient approaches, while a diverse range of established scientists from across the globe will chair the proceedings. In this manner, we hope to stimulate discussions on how gradients are changing our understanding brain organisation and to initiate fellow researchers to this burgeoning field. 
+	This one-day workshop will be hosted at the Montreal Neurological Institute, a site with a rich history of neuroscience research and neuroimaging excellence. Early career researchers will take centre stage for a series of talks on state-of-the-art development and application of gradient approaches, while a diverse range of established scientists from across the globe will chair the proceedings. In this manner, we hope to stimulate discussions on how gradients are changing our understanding brain organisation and to initiate fellow researchers to this burgeoning field. 	</br>
 	</br>
 </p>
 
-<h1 id="program"> PRELIMAINRY WORKSHOP PROGRAM AND CONFIRMED SPEAKERS</h1>
+<h1 id="program"> PRELIMAINRY WORKSHOP PROGRAM </h1>
   <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
@@ -89,7 +89,7 @@
   <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
-			<h2>8.30-3.00PM: MONTREAL NEUROLOGICAL INSTITUTE</h2> 
+			<h2>9.00-5.00PM: MONTREAL NEUROLOGICAL INSTITUTE</h2> 
 			<p>3801 University Street Montreal, QC, H3A2B4</p></br>
 			</br>
 			 <img src="assets/theneuroface.jpg" width="400px" /></br>
@@ -120,19 +120,6 @@
  <h1 id="sponsors"> PARTNERS</h1>
  
   <table style="width:100%" >
-		<tr>
-		<td style="width:100px" text-align:center">	
-			<center>
-				<img src="assets/CMI.png" width="80px"/>
-			</center>
-		</td>
-		
-		<td style="width:100px" text-align:center">	
-			<center>
-				<img src="assets/TACC.jpg" width="80px"/>
-			</center>
-		</td>
-		
 		
 		<td style="width:100px" text-align:center">	
 			<center>
