--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 </head>
 <body>
 	
-
 <nav class="fixed-nav-bar">
   <div id="menu" class="menu">
   <center>
@@ -68,7 +67,7 @@
 			<td style="width:350px; text-align:center">
 			<h2>ORGANISING COMMITTEE</h2> 
 			<p>
-			Daniel Margulies PhD (Institut Pasteur, France) </br>
+			Daniel Margulies PhD (Institut du Cerveau et de la Moelle épinière, France) </br>
 			Boris Bernhardt PhD (Montreal Neurological Institute, Canada) </br>
 			Casey Paquola PhD (Montreal Neurological Institute, Canada) </br>
 			Richard Bethlehem PhD (University of Cambridge, UK) </br>
