--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Gradients of Brain OrganiZation, MONTREAL 2020</title>
+<title>Gradients of Brain Organization, MONTREAL 2020</title>
 <meta name="description" content="GRADIENTS OF BRAIN ORGANIZATION">
 <meta name="author" content="boris@bic.mni.mcgill.ca">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -116,13 +116,6 @@
  <h1 id="sponsors"> PARTNERS</h1>
  
   <table style="width:100%" >
-		
-		<td style="width:100px" text-align:center">	
-			<center>
-				<img src="assets/qbin.jpg" width="80px"/>
-			</center>
-		</td>
-		
 		<td style="width:100px" text-align:center">	
 			<center>
 				<img src="assets/neuro_final_400.jpg" width="80px"/>
@@ -135,8 +128,6 @@
 			</center>
 		</td>
 		</tr>
-		
-	
  </table>	
  	
   </br>
@@ -144,7 +135,7 @@
   <p>
   <center>
   Follow us on twitter</br>
-  <a href="https://twitter.com/MontrealAutism/" target="_blank">
+  <a href="https://twitter.com/GradientsMtl/" target="_blank">
   <img src="assets/twitter_logo_grey.jpg" width="60px" /></a>
   </center>
   </br>
