--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
     </center>
   </div>
 </nav>
+
+<section class="content_coloured">
+  <div class="description">
+    <h3></h3>
+  </div>
+</section>
 	
 <section class="content">
   <div class="description">
@@ -50,7 +56,7 @@
 	</br>
 </p>
 
-<h1 id="program"> PRELIMAINRY WORKSHOP PROGRAM </h1>
+<h1 id="program"> PRELIMINARY WORKSHOP PROGRAM </h1>
   <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
