--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
   </div>
 </nav>
 
-<section class="content_coloured">
-  <div class="description">
-    <h3></h3>
+<nav class="fixed-nav-bar">
+  <div id="menu" class="menu">
+  <center>
   </div>
-</section>
+</nav>
 	
 <section class="content">
   <div class="description">
