--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<tr>
 	</br>
 	<tr>
-	This one-day workshop will be hosted at the Montreal Neurological Institute, a site with a rich history of neuroscience research and neuroimaging excellence. Early career researchers will take centre stage for a series of talks on state-of-the-art development and application of gradient approaches, while a diverse range of established scientists from across the globe will chair the proceedings. In this manner, we hope to stimulate discussions on how gradients are changing our understanding brain organisation and to initiate fellow researchers to this burgeoning field. 	</br>
+	This one-day workshop will be hosted at the Montreal Neurological Institute, a site with a rich history of neuroscience research and neuroimaging excellence. Early career researchers will take centre stage for a series of talks on state-of-the-art development and application of gradient approaches, while a diverse range of established scientists from across the globe will chair the proceedings. In this manner, we hope to stimulate discussions on how gradients are changing our understanding of brain organisation and to initiate fellow researchers to this burgeoning field. 	</br>
 	</br>
 </p>
 
