--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
 				<p>
 				Early bird registration fees are $50 for faculty and $25 for trainees, 
 				taxes included. </br>
-				Registration is now open - please  
-	  			<a href="http://neuroevents.mcgill.ca/forms/autism-neuroimaging-2019.php" target="_blank">
-				Register here</a>
+				Registration is will open soon
 	  			</p>
 			</td>	
 		</tr>
