--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<p>
 				Early bird registration fees are $50 for faculty and $25 for trainees, 
 				taxes included. </br>
-				Registration is will open soon
+				Registration opening soon
 	  			</p>
 			</td>	
 		</tr>
