--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<p>
 				Early bird registration fees are $80 for faculty and $60 for trainees, 
 				taxes included. </br>
-				Registration opening soon
+				Registration opening in February
 	  			</p>
 			</td>	
 		</tr>
@@ -113,18 +113,22 @@
  <h1 id="sponsors"> PARTNERS</h1>
  
   <table style="width:100%" >
-		<td style="width:100px" text-align:center">	
+	  	<td style="width:100px" text-align:center">	
 			<center>
 				<img src="assets/neuro_final_400.jpg" width="80px"/>
 			</center>
 		</td>
-		
 		<td style="width:100px" text-align:center">	
 			<center>
-				<img src="assets/McGill_logo.png" width="100px"/>
+				<img src="assets/fom.jpg" width="80px"/>
 			</center>
 		</td>
-		</tr>
+		<td style="width:100px" text-align:center">	
+			<center>
+				<img src="assets/qbin.jpg" width="80px"/>
+			</center>
+		</td>
+	  	</tr>
  </table>	
  	
   </br>
