--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
   <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
+			<p>
+			Downloadable <a href="Program.pdf" target="_blank">here</a></br>
+			</p>
+			</td>
+			
+			<td style="width:350px; text-align:center">
 			<h2>TOPICS</h2> 
 			<p>
 			Manifold learning – Big Data - Neuroinformatics </br> 
@@ -81,6 +87,7 @@
 		</tr>
 		</tr>
  </table>
+		
  
  <h1 id="venue"> VENUE</h1>
   <table style="width:100%">
