--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 		</td>
 		<td style="width:100px" text-align:center">	
 			<center>
-				<img src="assets/fom.jpg" width="80px"/>
+				<img src="fom.jpg" width="80px"/>
 			</center>
 		</td>
 		<td style="width:100px" text-align:center">	
