--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
   <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
+			<h2>PROGRAM</h2> 
 			<p>
 			Downloadable <a href="Program.pdf" target="_blank">here</a></br>
 			</br>
 	  		</p>
 			</td>
-			
+		</tr>
+		<tr>
 			<h2>TOPICS</h2> 
 			<p>
 			Manifold learning – Big Data - Neuroinformatics </br> 
