--- a/index.html
+++ b/index.html
@@ -129,12 +129,17 @@
 		</td>
 		<td style="width:100px" text-align:center">	
 			<center>
-				<img src="fom.jpg" width="250px"/>
+				<img src="assets/qbin.jpg" width="200px"/>
+			</center>
+		</td>
+	  	<td style="width:100px" text-align:center">	
+			<center>
+				<img src="cnrs_logo.jpg" width="100x"/>
 			</center>
 		</td>
 		<td style="width:100px" text-align:center">	
 			<center>
-				<img src="assets/qbin.jpg" width="80px"/>
+				<img src="fom.jpg" width="250px"/>
 			</center>
 		</td>
 	  	</tr>
