--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 		</td>
 	  	<td style="width:100px" text-align:center">	
 			<center>
-				<img src="cnrs_logo.jpg" width="100x"/>
+				<img src="cnrs_logo.jpg" width="80px"/>
 			</center>
 		</td>
 		<td style="width:100px" text-align:center">	
