--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
 				<p>
 				Early bird registration fees are $80 for faculty and $60 for trainees, 
 				taxes included. </br>
-				Registration opening in February
+				Registration and abstract submission are now open
+			 	<a href="https://www.conftool.com/gradients-brain-organization-workshop-2020/" target="_blank">https://www.conftool.com/gradients-brain-organization-workshop-2020/</a></br>
 	  			</p>
 			</td>	
 		</tr>
