--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="menu" class="menu">
   <center>
    <div id="menu" class="menu">
-    <a class="sitename" href="index.html">24|06|2020</a>
+    <a class="sitename" href="index.html">23|06|2020</a>
     <a class="show" href="#menu">Menu</a><a class="hide" href="#hidemenu">Menu</a>
     <ul class="menu-items">
       <li><a href="#about">ABOUT</a></li>
@@ -41,11 +41,13 @@
 <section class="some-related-articles">
   <center>
   <h1 id="about">ABOUT</h1>
-   <p>Recent years have seen a rise of new methods and applications to study smooth spatial transitions — or gradients —of brain organization. Identification and analysis of cortical gradients provides a framework to study brain organization across species, to examine changes in brain development and aging, and to more generally study the interrelation between brain structure, function and cognition. In this pre-OHBM workshop, held on the 24th of June 2020 in Montreal, we will bring together outstanding junior and senior scientists to discuss the challenges and opportunities afforded by this emerging perspective. </br>
+   <p>Recent years have seen a rise of new methods and applications to study smooth spatial transitions — or gradients —of brain organization. Identification and analysis of cortical gradients provides a framework to study brain organization across species, to examine changes in brain development and aging, and to more generally study the interrelation between brain structure, function and cognition. In this pre-OHBM workshop, held on the 23rd of June 2020, we will bring together outstanding junior and senior scientists to discuss the challenges and opportunities afforded by this emerging perspective. </br>
 	<tr>
 	</br>
 	<tr>
-	This one-day workshop will be hosted at the Montreal Neurological Institute, a site with a rich history of neuroscience research and neuroimaging excellence. Early career researchers will take centre stage for a series of talks on state-of-the-art development and application of gradient approaches, while a diverse range of established scientists from across the globe will chair the proceedings. In this manner, we hope to stimulate discussions on how gradients are changing our understanding of brain organisation and to initiate fellow researchers to this burgeoning field. 	</br>
+	Early career researchers will take centre stage for a series of talks on state-of-the-art development and application of gradient approaches, while a diverse range of established scientists from across the globe will chair the proceedings. In this manner, we hope to stimulate discussions on how gradients are changing our understanding of brain organisation and to initiate fellow researchers to this burgeoning field.</br>
+	<tr>
+	Update: This satellite event will be hosted online and registeration is free </br>
 	</br>
 </p>
 
@@ -89,29 +91,15 @@
 		</tr>
 		</tr>
  </table>
-		
- 
- <h1 id="venue"> VENUE</h1>
-  <table style="width:100%">
-		<tr>
-			<td style="width:350px; text-align:center">
-			<h2>9.00-5.00PM: MONTREAL NEUROLOGICAL INSTITUTE</h2> 
-			<p>3801 University Street Montreal, QC, H3A2B4</p></br>
-			</br>
-			 <img src="assets/theneuroface.jpg" width="400px" /></br>
-			  <a href="https://www.mcgill.ca/neuro/" target="_blank">https://www.mcgill.ca/neuro/</a></br>
-			</td>	
-		</tr>
- </table>		
+			
  
  <h1 id="register"> REGISTRATION</h1>
   <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
 				<p>
-				Early bird registration fees are $80 for faculty and $60 for trainees, 
-				taxes included. </br>
-				Registration and abstract submission are now open
+				Free </br>
+				Registration is now open
 			 	<a href="https://www.conftool.com/gradients-brain-organization-workshop-2020/" target="_blank">https://www.conftool.com/gradients-brain-organization-workshop-2020/</a></br>
 	  			</p>
 			</td>	
