--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<p>
 				Free </br>
 				Registration is now open
-			 	<a href="https://www.conftool.com/gradients-brain-organization-workshop-2020/" target="_blank">https://www.conftool.com/gradients-brain-organization-workshop-2020/</a></br>
+			 	<a href="https://mcgill.ca/neuro/channels/event/virtual-gradients-brain-organization-workshop-zoom-302746" target="_blank">https://www.conftool.com/gradients-brain-organization-workshop-2020/</a></br>
 	  			</p>
 			</td>	
 		</tr>
