--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
 			<h2>PROGRAM</h2> 
 			<p>
 			The preliminary program is downloadable <a href="Program.pdf" target="_blank">here</a></br>
-			All talk will also be live-streamed for those not able to attend in person, and moderators will help to pass on questions from the virtual crowd.
-			The Gradient Workshop will take place on 18th of June, the day before OHBM. On Sunday the 19th, many from the workshop will travel from Cambridge to Glasgow together via train. We will be in touch with registrees about the specific train times, so you can join the Gradients Train too. Choo Choo! </br> 
-
+			All talks will also be live-streamed for those not able to attend in person, and moderators will help to pass on questions from the virtual crowd.</br>
+			The Gradient Workshop will take place on 18th of June, the day before OHBM. On Sunday the 19th, many from the workshop will travel from Cambridge to Glasgow together via train. We will be in touch with registrees about the specific train times, so you can join the Gradients Train too. </br> 
 			</br>
 	  		</p>
 			</td>
