--- a/index.html
+++ b/index.html
@@ -101,7 +101,9 @@
 				Fee: 25£. </br>
 				We have a small number of subsidised registration places available. If you are unable to pay the registration fee, please get in touch to request subsidised registration. Follow the link below for contact details.  </br>
 				Registration is now open
-				<a href="https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop" target="_blank">https://www.conftool.com/gradients-brain-organization-workshop-2020/</a></br>
+				<a href="https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop)
+onlinesales.admin.cam.ac.uk" target="_blank">https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop)
+onlinesales.admin.cam.ac.uk/</a></br>
 	  			</p>
 			</td>	
 		</tr>
