--- a/index.html
+++ b/index.html
@@ -98,12 +98,15 @@
 		<tr>
 			<td style="width:350px; text-align:center">
 				<p>
-				Fee: 25£. </br>
-				We have a small number of subsidised registration places available. If you are unable to pay the registration fee, please get in touch to request subsidised registration. Follow the link below for contact details.  </br>
-				Registration is now open
+				Registration is now open </br>
 				<a href="https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop)
 onlinesales.admin.cam.ac.uk" target="_blank">https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop)
 onlinesales.admin.cam.ac.uk/</a></br>
+				Fee: 25£. </br>
+				We have a small number of subsidised registration places available. If you are unable to pay the registration fee, please get in touch to request subsidised registration. Follow the link below for contact details. </br>
+
+				We're welcoming abstract submission for flash talks and poster presentations. The top abstracts will be selected for flash talks (5mins) and all relevant abstracts will be accepted as poster presentations. Deadline for submissions is May 1st. </br>
+				Submit your abstracts <a href="https://forms.gle/NGN2TJzfEwMmop5Z8" target="_blank">here</a></br> 
 	  			</p>
 			</td>	
 		</tr>
