--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
     <a class="show" href="#menu">Menu</a><a class="hide" href="#hidemenu">Menu</a>
     <ul class="menu-items">
       <li><a href="#about">ABOUT</a></li>
-      <li><a href="#program">PROGRAM</a></li>
-     <li><a href="#venue">VENUE</a></li>
-      <li><a href="#register">REGISTRATION</a></li>
-	  <li><a href="#partners">PARTNERS</a></li>
+      <li><a href="#workshop">THE WORKSHOP</a></li>
+      <li><a href="#register">REGISTRATION AND ABSTRACTS</a></li>
+	  <li><a href="#partners">ORGANISERS AND PARTNERS</a></li>
   </ul>
   </div>
     </p>
@@ -51,7 +50,7 @@
 	</br>
 </p>
 
-<h1 id="program"> PRELIMINARY WORKSHOP PROGRAM </h1>
+<h1 id="program"> THE WORKSHOP </h1>
   <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
@@ -59,41 +58,21 @@
 			<p>
 			The preliminary program is downloadable <a href="Program.pdf" target="_blank">here</a></br>
 			All talks will also be live-streamed for those not able to attend in person, and moderators will help to pass on questions from the virtual crowd.</br>
-			The Gradient Workshop will take place on 18th of June, the day before OHBM. On Sunday the 19th, many from the workshop will travel from Cambridge to Glasgow together via train. We will be in touch with registrees about the specific train times, so you can join the Gradients Train too. </br> 
 			</br>
 	  		</p>
 			</td>
 		</tr>
 		<tr>
-			<h2>TOPICS</h2> 
+			<h2>ONWARDS TO OHBM</h2> 
 			<p>
-			Methods and modelling </br> 
-			Gradient neurobiology </br> 
-			Cognitive and clinical perspectives </br> 
-			</br> 
+			The Gradient Workshop will take place on 18th of June, the day before OHBM. On Sunday the 19th, many from the workshop will travel from Cambridge to Glasgow together via train. We will be in touch with registrees about the specific train times, so you can join the Gradients Train too. </br> 			</br> 
 			</p>
 			</td>
-		</tr>
-		<tr>
-			<td style="width:350px; text-align:center">
-			<h2>ORGANISING COMMITTEE</h2> 
-			<p>
-			Richard Bethlehem PhD (University of Cambridge, UK) </br>
-			Casey Paquola PhD (Forschungszentrum Julich, Germany) </br>
-			Boris Bernhardt PhD (Montreal Neurological Institute, Canada) </br>
-			Elizabeth Jefferies PhD (University of York, UK) </br>
-			Robert Leech PhD (Kings College London, UK) </br>
-			Daniel Margulies PhD (Institut du Cerveau et de la Moelle épinière, France) </br>
-			Sofie Valk PhD (Forschungszentrum Julich, Germany) </br>
-			B.T. Thomas Yeo PhD (National University of Singapore, Singapore) </br>
-			</p>
-			</td>	
-		</tr>
 		</tr>
  </table>
 			
  
- <h1 id="register"> REGISTRATION</h1>
+ <h1 id="register"> REGISTRATION AND ABSTRACTS</h1>
   <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
@@ -114,9 +93,24 @@ onlinesales.admin.cam.ac.uk/</a></br>
  </table>	
  
  
- <h1 id="sponsors"> PARTNERS</h1>
- 
+ <h1 id="sponsors"> ORGANISERS AND PARTNERS</h1>
   <table style="width:100%" >
+ 		<tr>
+			<td style="width:350px; text-align:center">
+			<h2>ORGANISING COMMITTEE</h2> 
+			<p>
+			Richard Bethlehem PhD (University of Cambridge, UK) </br>
+			Casey Paquola PhD (Forschungszentrum Julich, Germany) </br>
+			Boris Bernhardt PhD (Montreal Neurological Institute, Canada) </br>
+			Elizabeth Jefferies PhD (University of York, UK) </br>
+			Robert Leech PhD (Kings College London, UK) </br>
+			Daniel Margulies PhD (Institut du Cerveau et de la Moelle épinière, France) </br>
+			Sofie Valk PhD (Forschungszentrum Julich, Germany) </br>
+			B.T. Thomas Yeo PhD (National University of Singapore, Singapore) </br>
+			</p>
+			</td>	
+		</tr>
+		</tr>
 	  	<td style="width:100px" text-align:center">	
 			<center>
 				<img src="assets/EPS_logo.png" width="80px"/>
