--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
-			<h2>PROGRAM</h2> 
+			<h1>PROGRAM</h1> 
 			<p>
 			The preliminary program is downloadable <a href="Program.pdf" target="_blank">here</a></br>
 			All talks will also be live-streamed for those not able to attend in person, and moderators will help to pass on questions from the virtual crowd.</br>
@@ -72,10 +72,11 @@
  </table>
 			
  
- <h1 id="register"> REGISTRATION AND ABSTRACTS</h1>
+ <h1 id="register"> REGISTER</h1>
   <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
+				<h1>REGISTRATION</h1> 
 				<p>
 				Registration is now open </br>
 				<a href="https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop" target="_blank">https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop)
@@ -83,6 +84,7 @@ onlinesales.admin.cam.ac.uk/</a></br>
 				Fee: 25£. </br>
 				We have a small number of subsidised registration places available. If you are unable to pay the registration fee, please get in touch to request subsidised registration. Follow the link below for contact details. </br>
 
+				<h2>ABSTRACTS</h2> 
 				We're welcoming abstract submission for flash talks and poster presentations. The top abstracts will be selected for flash talks (5mins) and all relevant abstracts will be accepted as poster presentations. Deadline for submissions is May 1st. </br>
 				Submit your abstracts <a href="https://forms.gle/NGN2TJzfEwMmop5Z8" target="_blank">here</a></br> 
 	  			</p>
