--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
 				<h1>REGISTRATION</h1> 
 				<p>
 				Registration is now open </br>
-				<a href="https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop" target="_blank">https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop)
-onlinesales.admin.cam.ac.uk/</a></br>
+				<a href="https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop" target="_blank">https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop/</a></br>
 				Fee: 25£. </br>
 				We have a small number of subsidised registration places available. If you are unable to pay the registration fee, please get in touch to request subsidised registration. Follow the link below for contact details. </br>
 
@@ -95,10 +94,10 @@ onlinesales.admin.cam.ac.uk/</a></br>
  
  
  <h1 id="sponsors"> ORGANISERS AND PARTNERS</h1>
-  <table style="width:100%" >
- 		<tr>
+  <table style="width:100%">
+		<tr>
 			<td style="width:350px; text-align:center">
-			<h2>ORGANISING COMMITTEE</h2> 
+			<h1>ORGANISING COMMITTEE</h1> 
 			<p>
 			Richard Bethlehem PhD (University of Cambridge, UK) </br>
 			Casey Paquola PhD (Forschungszentrum Julich, Germany) </br>
